--- a/treinamento-sites-master/mz/scss/layout/footer.scss
+++ b/treinamento-sites-master/mz/scss/layout/footer.scss
@@ -1,7 +1,11 @@
 #footer {
     background: #008dd1;
+    padding: 40px 0;
+    display: flex;
     .lista-footer{
         color: #fff;
+        align-items: center;
+        display: flex;
     }
     .redes-sociais {
         ul {
@@ -10,9 +14,6 @@
                 display: inline-block;
                 margin-left: 10px;
                 font-size: 30px;
-                a {
-                    color: #fff;
-                }
             }
         }
     }
