--- a/treinamento-sites-master/mz/scss/layout/widgets-box.scss
+++ b/treinamento-sites-master/mz/scss/layout/widgets-box.scss
@@ -3,6 +3,7 @@
     color: #fff;
     h3 {
         font-weight: bold;
+        text-align: center;
     }
     .lef {
         background: #008dd1;
